Agregado de total disponible en la cuenta del usuario, en la página de pagos de facturas

--- a/htdocs/customer_account/langs/es_AR/customeraccount.lang
+++ b/htdocs/customer_account/langs/es_AR/customeraccount.lang
@@ -24,3 +24,4 @@ CustomerAccountUpdateButton=Actualizar registro
 CustomerAccountCancelButton=Cancelar y volver
 CustomerAccountTotal=Monto Total
 CustomerAccountTotalforthispage=Monto Total de la Página
+CustomerAccountDisponible=Disponible en la cuenta
