Agregado de manejo de pagos a facturas sacados de la cuenta interna del cliente en los nuevos pagos. (1) Comporttamiento. (2) CVisualizaciòn de totales y disponibles. (3) Validaciones. (4) Guardado de movimientos en la cuenta interna.

--- a/htdocs/customer_account/langs/es_AR/customeraccount.lang
+++ b/htdocs/customer_account/langs/es_AR/customeraccount.lang
@@ -25,3 +25,4 @@ CustomerAccountCancelButton=Cancelar y volver
 CustomerAccountTotal=Monto Total
 CustomerAccountTotalforthispage=Monto Total de la Página
 CustomerAccountDisponible=Disponible en la cuenta
+CustomerAccountPaiementSuperaSaldoTotalCuenta=El monto total de los pagos supera el saldo de la cuenta
