--- a/htdocs/customer_account/langs/es_AR/customeraccount.lang
+++ b/htdocs/customer_account/langs/es_AR/customeraccount.lang
@@ -26,3 +26,5 @@ CustomerAccountTotal=Monto Total
 CustomerAccountTotalforthispage=Monto Total de la Página
 CustomerAccountDisponible=Disponible en la cuenta
 CustomerAccountPaiementSuperaSaldoTotalCuenta=El monto total de los pagos supera el saldo de la cuenta
+CustomerAccountHasDiscount=Este cliente tiene descuento por saldo a favor de: <b>%s</b>
+CustomerAccountDiscountDescription=Descuento por Saldo a Favor
