Agregado inicial de código para la política de descuento en una factura por saldo a favor en la cuenta del cliente (requerimiento 2) (reverted from commit 50b349e3ecb6c7359713dcd5d97ce238804759aa)

--- a/htdocs/customer_account/langs/es_AR/customeraccount.lang
+++ b/htdocs/customer_account/langs/es_AR/customeraccount.lang
@@ -28,3 +28,8 @@ CustomerAccountDisponible=Disponible en la cuenta
 CustomerAccountPaiementSuperaSaldoTotalCuenta=El monto total de los pagos supera el saldo de la cuenta
 CustomerAccountHasDiscount=Este cliente tiene descuento por saldo a favor de: <b>%s</b>
 CustomerAccountDiscountDescription=Descuento por Saldo a Favor
+CustomerAccountBalanceCuentadelCliente=Balance Cuenta del Cliente
+CustomerAccountSaldoCuentaCorriente=Saldo Cuenta Corriente
+CustomerAccountRestaPagarFacturas=Resta Pagar (Facturas)
+CustomerAccountSaldoCliente=Saldo Cliente
+
