Modificaciones a req 1: Mostrar el saldo en linea de lo pendiente. 1. cambiar "saldo cliente" ---- Saldo de la cuenta corriente. 2. cambiar "saldo cuenta corriente" ------ Fondo disponible para imputar. 3. agregar el link a la factura del movimiento. 4. validar que no deje modificar el pago del cliente sin autorizacion...limitar a que lo haga el superadmin. 5. Internacionalización. 6. Nombre del Módulo de cuenta cliente para visualización.

--- a/htdocs/langs/es_ES/admin.lang
+++ b/htdocs/langs/es_ES/admin.lang
@@ -572,6 +572,8 @@ Module60000Name=Comisiones
 Module60000Desc=Módulo para gestionar las comisiones de venta
 Module63000Name=Recursos
 Module63000Desc=Gestionar recursos (impresoras, automóviles, salas, ...) puede compartirlos en  los eventos
+Module68000Name=Cuenta Corriente del Cliente
+Module68000Desc=Administrar Movimientos de Cuenta Corriente del Cliente
 Permission11=Consultar facturas
 Permission12=Crear/Modificar facturas
 Permission13=De-validar facturas
