--- a/htdocs/langs/en_US/admin.lang
+++ b/htdocs/langs/en_US/admin.lang
@@ -568,6 +568,8 @@ Module60000Name=Commissions
 Module60000Desc=Module to manage commissions
 Module63000Name=Resources
 Module63000Desc=Manage resources (printers, cars, room, ...) you can then share into events
+Module68000Name=Customer Account
+Module68000Desc=Manage Transactions of Customer Account
 Permission11=Read customer invoices
 Permission12=Create/modify customer invoices
 Permission13=Unvalidate customer invoices
