--- a/htdocs/langs/es_AR/admin.lang
+++ b/htdocs/langs/es_AR/admin.lang
@@ -572,6 +572,8 @@ Module60000Name=Commissions
 Module60000Desc=Module to manage commissions
 Module63000Name=Resources
 Module63000Desc=Manage resources (printers, cars, room, ...) you can then share into events
+Module68000Name=Cuenta Corriente del Cliente
+Module68000Desc=Administrar Movimientos de Cuenta Corriente del Cliente
 Permission11=Read customer invoices
 Permission12=Create/modify customer invoices
 Permission13=Unvalidate customer invoices
