Modificaciones a req 1: 1. Manejo de cheques: alta/modificación en el alta de movimiennto del cliente, utilización en pagos de clientes y a proveedores, visualizar listado de cheques.

--- a/htdocs/customer_account/langs/es_AR/customeraccount.lang
+++ b/htdocs/customer_account/langs/es_AR/customeraccount.lang
@@ -5,6 +5,7 @@ CustomerAccountFieldentity=Entidad
 CustomerAccountFieldDateOperationShort=Fecha de Operación
 CustomerAccountFieldamount=Monto
 CustomerAccountFieldlabel=Descripción
+CustomerAccountFieldDateCheckShort=Fecha de Cobro del Cheque
 CustomerAccountFieldfk_customer_account=Cuenta asociada
 CustomerAccountFieldfk_user_author=Creado Por
 CustomerAccountFieldfk_user_modif=Modificado Por
