Modificaciones a req 1: 1. Manejo de cheques: Validaciones de selección de cheques, y se volvieron a agregar campos que se habían sacado (Numero, Emisor y Banco) ya que se usan para el caso de transferencias bancarias.

--- a/htdocs/customer_account/langs/es_ES/customeraccount.lang
+++ b/htdocs/customer_account/langs/es_ES/customeraccount.lang
@@ -33,4 +33,5 @@ CustomerAccountBalanceCuentadelCliente=Balance Cuenta del Cliente
 CustomerAccountSaldoCuentaCorriente=Fondo disponible para imputar
 CustomerAccountRestaPagarFacturas=Resta Pagar (Facturas)
 CustomerAccountSaldoCliente=Saldo de la cuenta corriente
+PaiementSelectCheque=Debe seleccionar al menos un cheque
 
