Modificaciones a req 1: 1. Manejo de cheques: I18n y arreglos en los anchos de columnas de la tabla.

--- a/htdocs/langs/en_US/bills.lang
+++ b/htdocs/langs/en_US/bills.lang
@@ -387,10 +387,14 @@ BICNumber=BIC/SWIFT number
 ExtraInfos=Extra infos
 RegulatedOn=Regulated on
 ChequeNumber=Check N°
+TransferNumber=Transfer nº
 ChequeOrTransferNumber=Check/Transfer N°
 ChequeBordereau=Check schedule
 ChequeMaker=Check/Transfer transmitter
+ChequeOnlyMaker=Check transmitter
+TransferOnlyMaker=Transfer transmitter
 ChequeBank=Bank of Check
+TransferBank=Bank of Transfer
 CheckBank=Check
 NetToBePaid=Net to be paid
 PhoneNumber=Tel
