--- a/htdocs/langs/es_AR/bills.lang
+++ b/htdocs/langs/es_AR/bills.lang
@@ -398,10 +398,14 @@ BICNumber=Código BIC/SWIFT
 ExtraInfos=Informaciones complementarias
 RegulatedOn=Pagar el
 ChequeNumber=Cheque nº
+TransferNumber=Transferencia nº
 ChequeOrTransferNumber=Cheque/Transferencia nº
 ChequeBordereau=Comprobar agenda
 ChequeMaker=Transmisor Cheque/Transferencia
+ChequeOnlyMaker=Transmisor Cheque
+TransferOnlyMaker=Transmisor Transferencia
 ChequeBank=Banco del cheque
+TransferBank=Banco de la transferencia
 CheckBank=Verificar
 NetToBePaid=Neto a pagar
 PhoneNumber=Tel.
