Modificaciones a req 1: 1. Imputar a la cuenta contable (caja) en el momento de ingresar a cuenta corriente, en vez de cuando se imputa el pago de la fatura. 4. Imputar cheques. Sumarizar los montos con la selección de cheques, para visualizar el total a imputar utilizando esos cheques.

--- a/htdocs/customer_account/langs/es_AR/customeraccount.lang
+++ b/htdocs/customer_account/langs/es_AR/customeraccount.lang
@@ -34,3 +34,7 @@ CustomerAccountSaldoCuentaCorriente=Fondo disponible para imputar
 CustomerAccountRestaPagarFacturas=Resta Pagar (Facturas)
 CustomerAccountSaldoCliente=Saldo de la cuenta corriente
 PaiementSelectCheque=Debe seleccionar al menos un cheque
+ChequeWithCustomerPaiement=Asociado a pago de Cliente
+ChequeWithSupplierPaiement=Utilizado para pago de Proveedor
+ErrorFieldMustBeNumber=El campo %s debe ser numérico
+ErrorFieldCantBeNegative=El campo %s no puede ser negativo
