--- a/htdocs/customer_account/langs/es_ES/customeraccount.lang
+++ b/htdocs/customer_account/langs/es_ES/customeraccount.lang
@@ -34,4 +34,8 @@ CustomerAccountSaldoCuentaCorriente=Fondo disponible para imputar
 CustomerAccountRestaPagarFacturas=Resta Pagar (Facturas)
 CustomerAccountSaldoCliente=Saldo de la cuenta corriente
 PaiementSelectCheque=Debe seleccionar al menos un cheque
+ChequeWithCustomerPaiement=Asociado a pago de Cliente
+ChequeWithSupplierPaiement=Utilizado para pago de Proveedor
+ErrorFieldMustBeNumber=El campo %s debe ser numérico
+ErrorFieldCantBeNegative=El campo %s no puede ser negativo
 
