--- a/htdocs/langs/es_AR/banks.lang
+++ b/htdocs/langs/es_AR/banks.lang
@@ -93,6 +93,7 @@ Reconciled=Reconciliado
 NotReconciled=No reconciliado
 CustomerInvoicePayment=Cobro a cliente
 SupplierInvoicePayment=Pago a proveedor
+CustomerAccountMovement=Entrega del cliente
 SubscriptionPayment=Pago cuota
 WithdrawalPayment=Cobro de domiciliación
 SocialContributionPayment=Pago impuesto social/fiscal
