Modificaciones a req 1: 3. Imputar cheques parciales. Al momento de pagar facturas, si el valor de un cheque es mayor al pago total (es decir, si se "pasa"), poner ese cheque como usado parcialmente, y que el resto esté disponible para seguir siendo utilizado para futuras imputaciones. No dejar ningún cheque con saldo. 4. Imputar cheques. Sumarizar los montos con la selección de cheques, para visualizar el total a imputar utilizando esos cheques. 5. Utilizar cheques de clientes para pago a proveedores. Los cheques que fueron ingresados ya pueden ser imputados a pagos a proveedores, sin importar si fueron imputados a pagos de clientes.
Correcciones derivadas de pruebas

--- a/htdocs/customer_account/langs/es_ES/customeraccount.lang
+++ b/htdocs/customer_account/langs/es_ES/customeraccount.lang
@@ -38,4 +38,4 @@ ChequeWithCustomerPaiement=Asociado a pago de Cliente
 ChequeWithSupplierPaiement=Utilizado para pago de Proveedor
 ErrorFieldMustBeNumber=El campo %s debe ser numérico
 ErrorFieldCantBeNegative=El campo %s no puede ser negativo
-
+PaiementChequeDisponible=Disponible
