Modificaciones a req 1: 1. Imputar a la cuenta contable (caja) en el momento de ingresar a cuenta corriente. 2. Agregar módulo de movimiento de cuenta del proveedor. 3. Imputar cheques parciales. 4. Imputar cheques. Sumarizar los montos con la selección de cheques. 5. Utilizar cheques de clientes para pago a proveedores.
Correcciones derivadas de las pruebas.

--- a/htdocs/langs/en_US/admin.lang
+++ b/htdocs/langs/en_US/admin.lang
@@ -570,6 +570,8 @@ Module63000Name=Resources
 Module63000Desc=Manage resources (printers, cars, room, ...) you can then share into events
 Module68000Name=Customer Account
 Module68000Desc=Manage Transactions of Customer Account
+Module69000Name=Supplier Account
+Module69000Desc=Manage Transactions of Supplier Account
 Permission11=Read customer invoices
 Permission12=Create/modify customer invoices
 Permission13=Unvalidate customer invoices
