--- a/htdocs/langs/es_ES/admin.lang
+++ b/htdocs/langs/es_ES/admin.lang
@@ -574,6 +574,8 @@ Module63000Name=Recursos
 Module63000Desc=Gestionar recursos (impresoras, automóviles, salas, ...) puede compartirlos en  los eventos
 Module68000Name=Cuenta Corriente del Cliente
 Module68000Desc=Administrar Movimientos de Cuenta Corriente del Cliente
+Module69000Name=Cuenta Corriente del Proveedor
+Module69000Desc=Administrar Movimientos de Cuenta Corriente del Proveedor
 Permission11=Consultar facturas
 Permission12=Crear/Modificar facturas
 Permission13=De-validar facturas
