--- a/htdocs/langs/es_ES/banks.lang
+++ b/htdocs/langs/es_ES/banks.lang
@@ -94,6 +94,7 @@ NotReconciled=No reconciliado
 CustomerInvoicePayment=Cobro a cliente
 SupplierInvoicePayment=Pago a proveedor
 CustomerAccountMovement=Entrega del cliente
+SupplierAccountMovement=Entrega al proveedor
 SubscriptionPayment=Pago cuota
 WithdrawalPayment=Cobro de domiciliación
 SocialContributionPayment=Pago impuesto social/fiscal
